# ipywebrtc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releash.py  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.md  dev_environment.yml  environment.yml  ipywebrtc.json  postBuild.sh  pyproject.toml  readthedocs.yml  requirements.txt  requirements_rtd.txt  setup.py
.github/workflows/: code-quality.yml  main.yml
docs/: Makefile  environment.yml  make.bat  requirements.txt
docs/source/: AudioRecorder.ipynb  AudioStream.ipynb  CameraStream.ipynb  ImageRecorder.ipynb  Local media.ipynb  MediaImageRecorder.ipynb  MediaRecorder.ipynb  VideoRecorder.ipynb  VideoStream.ipynb  WidgetStream.ipynb  api.rst  conf.py  image-recorder.ipynb  index.rst  ipywebrtc.ipynb  widget-stream.ipynb
example/: ipywebrtc.ipynb
examples/: ArCube.ipynb  MagicCube.ipynb
ipywebrtc/: __init__.py  _version.py  webrtc.py
js/: README.md  karma.conf.js  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js  webpack.config.lab3.js
js/.github/workflows/: main.yml
js/css/: webrtc.css
js/src/: embed.js  extension.js  index.js  jupyter-webrtc.js  labplugin.js  utils.js  webrtc.js
js/src/streams/: Audio.js  Camera.js  Image.js  Media.js  Recorder.js  Video.js  Webrtc.js  Widget.js
js/test/: dummy-manager.ts  image-recorder.ts  index.ts  media-image-recorder.ts  mediastream.ts  widget-utils.ts
tests/: test_new.py
