[build-system]
requires = ["jupyter_packaging~=0.7.9", "jupyterlab~=3.0", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
fix = true
exclude = [
    '.git',
    'dist',
    '.eggs',
    '.releash.py'
]
line-length = 100
select = ["E", "W", "F", "Q", "I"]
extend-include = ["*.ipynb"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E501"]
"webrtc.py" = ["E501"]
"docs/source/conf.py" = ["E402"]